[tool.poetry]
name = "template-repo"
version = "0.1.0"
description = ""
authors = ["Nicholas Lee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.25.2"
ipykernel = "^6.25.2"
synapseclient = "^3.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
